--- a/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
+++ b/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
@@ -37,7 +37,7 @@
     "You get the picture, a Ph.D. prepares you to be highly trained in a very niche field. It does not train you to pass an HR screening or a take-home test. That's not to say there aren't skills you learned that aren't highly extensible to the industry, but it takes some refinement.\n",
     "This is true of anyone transitioning from academia, but it is doubly true if you have a degree in one of the less common fields (e.g. social sciences, humanities).\n",
     "    \n",
-    "Below is a script I wrote to query the Google Careers Search API for data science job titles and descriptions (I hid the code in custom functions in my [custom_function.py](LINK) to keep the blog more readible). I use this data to see how often different educational fields comes up as a search term in data science job postings."
+    "Below is a script I wrote to query the Google Careers Search API for data science job titles and descriptions (I hid the code in custom functions in my [custom_function.py](https://github.com/wkye/leaving-academia-for-tech/blob/main/custom_functions.py) to keep the blog more readible). I use this data to see how often different educational fields comes up as a search term in data science job postings."
    ]
   },
   {
@@ -67,7 +67,7 @@
     "import yaml\n",
     "import pandas as pd\n",
     "from serpapi import GoogleSearch\n",
-    "# hyperlink to github page\n",
+    "# https://github.com/wkye/leaving-academia-for-tech/blob/main/custom_functions.py\n",
     "import custom_functions\n",
     "\n",
     "with open('config.yaml', 'r') as file: keys = yaml.safe_load(file)\n",
