--- a/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
+++ b/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
@@ -44,15 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e8898370",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://serpapi.com/search\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# https://github.com/wkye/leaving-academia-for-tech/blob/main/custom_functions.py\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcustom_functions\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# query google \u001b[39;00m\n\u001b[1;32m      8\u001b[0m combined_queries \u001b[38;5;241m=\u001b[39m custom_functions\u001b[38;5;241m.\u001b[39mquery_google_jobs(q \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;66;03m# query search term\u001b[39;00m\n\u001b[1;32m      9\u001b[0m                                                       location \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew York, New York\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;66;03m# location of search \u001b[39;00m\n\u001b[1;32m     10\u001b[0m                                                       api_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSERIPAPI_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;66;03m# API key to hit google search\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m                                                       n_search \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;66;03m# number of searches\u001b[39;00m\n\u001b[1;32m     14\u001b[0m                                                      )\n",
+      "File \u001b[0;32m~/Data/leaving-academia-for-tech/custom_functions.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mserpapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GoogleSearch\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_objects\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgo\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mquery_google_jobs\u001b[39m(q, location, api_key, engine, chips, n_search):\n\u001b[1;32m      6\u001b[0m     combined_queries \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
      ]
     }
    ],
@@ -60,7 +65,6 @@
     "import os\n",
     "import pprint\n",
     "import pandas as pd\n",
-    "from serpapi import GoogleSearch\n",
     "# https://github.com/wkye/leaving-academia-for-tech/blob/main/custom_functions.py\n",
     "import custom_functions\n",
     "\n",
@@ -70,7 +74,7 @@
     "                                                      api_key = os.environ.get(\"SERIPAPI_KEY\"), # API key to hit google search\n",
     "                                                      engine = 'google_jobs',\n",
     "                                                      chips = 'job_family_1:data scientist', # family of jobs to look for\n",
-    "                                                      n_search = 5 # number of searches\n",
+    "                                                      n_search = 1 # number of searches\n",
     "                                                     )\n",
     "# clean results for querying google\n",
     "jobs_df = custom_functions.clean_google_jobs_query(combined_queries)"
@@ -88,9 +92,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "b98388f6",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -215,14 +217,6 @@
     "    \n",
     "I hope that this post gave you a some sort of sense of orientation for how to navigate the tech data space. Leaving academia for tech was not an easy journey, but one I do not regret. No matter what choice you make, good luck on your journey and if there's anyway I can be of help, don't hesitate to reach out! "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d5fe91f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
