add package for query google

--- a/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
+++ b/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "More and more people are flocking to the high-paying, flexible, and engaging work that the technology space has to offer. And with some of the highest training from the sharpest minds in their fields, the transition seems almost natural for academics. Almost. Tech is lauded as being a non-credentialed space - it doesn't care about where you went to school or what previous roles you've had. While this is true to an extent, it is more true for some fields than others. Transitioning from a physicist to a machine learning engineer is a story I've heard a million times. But what about someone with a social science Ph.D. or a humanity degree?\n",
+    "<!--more-->\n",
     "\n",
     "I left my Ph.D. program in sociology from the University of Notre Dame in 2017 without finishing my Doctorate. Today I am working as a data scientist at a tech company - in retrospect, a career much better suited for me personally. I want to use this post as an opportunity to share my thoughts on how my transition went and give a glimpse into a more unusual path into a tech career.\n",
-    "<!--more-->\n",
     "\n",
     "# Why I Left Academia\n",
     "\n",
@@ -41,6 +41,68 @@
     "    \n",
     "Below is a script I wrote to query the Google Careers Search API for data science job titles and descriptions (I hid the code in custom functions in my [custom_function.py](https://github.com/wkye/leaving-academia-for-tech/blob/main/custom_functions.py) to keep the blog more readible). I use this data to see how often different educational fields comes up as a search term in data science job postings."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d90d6889-1db9-4888-addf-8ae7563bd708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pprint\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "794c856d-a057-40e0-bbc3-411d25d09bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from serpapi import GoogleSearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb805342-2e9b-4022-80f4-412803464cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9402b292-a679-4984-a97b-d5ba05345b67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90c83a1-a53d-4ef1-bdcf-83e459bd0220",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b8f382-57e1-4599-894c-2af56a8c87da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92eca8b0-5c96-46f0-97b0-5e608f1af4f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -237,9 +299,9 @@
    "title": "Getting Out of Academia and into Tech Without a Hard Sciences Degree"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "leaving-academia-for-tech",
    "language": "python",
-   "name": "python3"
+   "name": "leaving-academia-for-tech"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
