--- a/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
+++ b/2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "# How Common is \"Sociology\" in Job Postings vs. \"Mathematics\" and Other Hard Science Degree   \n",
     "    \n",
-    "Below I built a custom python package to query the Google Careers Search API for data science job titles and descriptions (See here for [python package](https://github.com/wkye/leaving-academia-for-tech/blob/main/src/resources/google_query.py) and here for [API instructions](https://github.com/wkye/leaving-academia-for-tech)). I use this data to see how often different educational fields comes up as requirements in job postings"
+    "Below I built a custom python package to query the Google Careers Search API for data science job titles and descriptions (See here for [python package](https://github.com/wkye/leaving-academia-for-tech/blob/main/src/resources/google_query.py) and here for [API instructions](https://github.com/wkye/leaving-academia-for-tech)). I use this data to see how often different educational fields comes up as requirements in data science job postings."
    ]
   },
   {
@@ -82,86 +82,37 @@
    "id": "4bd24178",
    "metadata": {},
    "source": [
-    "Below is a sample of a returned data science job search query. **You can see that Sociology comes up 2% of the time while in contrast math comes up 54% of the time**. This is a simple, yet powerful, example of how coming out of academia with a non-hard sciences training drastically shapes how the job market views you."
+    "[Here is a sample job description](https://github.com/wkye/leaving-academia-for-tech/blob/main/sample_job_description.csv) from the query. **Out of 100 jobs, Sociology comes up 2% of the time while in contrast math comes up 54% of the time**. This is a simple, yet powerful, example of how coming out of academia with a non-hard sciences training drastically shapes how the job market views you."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "5254dc56-567f-4b33-8199-0d2ab3946601",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "company_name      NATIONAL GRID CO USA (NE POWER)\n",
-      "title           Lead Data Scientist, Data Science\n",
-      "Name: 0, dtype: object\n",
-      "About us\n",
-      "\n",
-      "Every day we deliver safe and secure energy to homes, communities, and businesses. We are there when people need us the most. We connect people to the energy they need for the lives they live. The pace of change in society and our industry is accelerating and our expertise and track record puts us in an unparalleled position to shape the sustainable future of our industry...\n",
-      "\n",
-      "To be successful we must anticipate the needs of our customers, reducing the cost of energy delivery today and pioneering the flexible energy systems of tomorrow. This requires us to deliver on our promises and always look for new opportunities to grow, both ourselves and our business.\n",
-      "\n",
-      "National Grid is hiring a Lead Data Scientist for Data Management & Analytics Team in the Load Forecasting & Analytics Department\" This position can be based out of Waltham, MA or Hicksville, NY, Brooklyn, NY, Syracuse, NY or Albany, NY.\n",
-      "Job Purpose\n",
-      "\n",
-      "The Load Forecasting & Analytics team produces the electric and gas load forecasts for National Grid as well economic analysis and insight. As a Lead Data Analyst within the Data Management & Analytics team, you will support the development, presentation, and defense of the gas and electric load forecasts for our US service territory by defining, managing, and executing all data-related tasks including, but not limited to: data acquisition, transformation, and storage; software/script development; data platform management and maintenance; requirements collection and stakeholder communications.\n",
-      "Key Accountabilities\n",
-      "\n",
-      "• Assemble small and large individual data sets that meet internal business requirements\n",
-      "• Design and implement ETL processes to collect, transform, and store data from various data sources (databases, APIs, FTPs, SharePoint, Power Platform, Azure) using a range of technologies depending upon the use case (SQL, R, Python, PowerShell)\n",
-      "• Develop, manage, and maintain the data platform, which includes database architecture, stored procedures, server task management, and reporting\n",
-      "• Drive the process to automate manual procedures and optimize data delivery for end-users\n",
-      "• Work with stakeholders to assist with data-related technical issues and support their data infrastructure needs\n",
-      "\n",
-      "Qualifications\n",
-      "\n",
-      "• Bachelor's degree in computer science, data science, statistics, informatics, information systems, or another quantitative field. Master's degree is strongly preferred, with a background in computer science / data science and/or database architecture.\n",
-      "• 5+ years of experience in a data-heavy role\n",
-      "• In-depth experience working with SQL databases (Oracle, SQL Server, PostgreSQL)\n",
-      "• Ability to write code in one or more scripting languages: R, Python\n",
-      "• GIS programming knowledge or experience strongly preferred\n",
-      "• Dev Ops engineering skills a plus (e.g., distributed computing, data pipelines)\n",
-      "• Experience with reporting/visualization tools like Tableau/Power BI preferred\n",
-      "• Successful history of manipulating, processing, and extracting value\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.iloc[0][[\"company_name\", \"title\"]])\n",
-    "print(df.iloc[0][\"description\"][0:3000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "id": "1c61498e-78b3-4482-84c7-0bc699fe3177",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"df.pkl\")\n",
+    "#Data Cleaning\n",
     "df[\"description\"] = df[\"description\"].str.lower()\n",
     "df[\"description\"] = df[\"description\"].replace(r\"\\n\", \" \", regex=True)\n",
-    "key_terms = [\n",
-    "    \"sociology\",\n",
-    "    \"social science\",\n",
-    "    \"physic\",\n",
-    "    \"computer science\",\n",
-    "    \"math\",\n",
-    "    \"engineering\",\n",
-    "]\n",
+    "key_terms = [ \"sociology\",\"social science\",\"physic\",\"computer science\",\"math\",\"engineering\"]\n",
     "for key_term in key_terms:\n",
     "    df[key_term] = df[\"description\"].str.contains(key_term)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "id": "a44f83ad-f071-4748-ba6e-2311de148341",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PERCENTAGE OF TIMES KEY WORDS COME UP IN JOB DESCRIPTIONS\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -174,46 +125,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print('PERCENTAGE OF TIMES KEY WORDS COME UP IN JOB DESCRIPTIONS')\n",
     "(df[key_terms].mean() * 100).sort_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d4c7b80d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create figure to illustrate how frequently different education fields come up in data science job postings\n",
-    "search_terms = [\n",
-    "    \"computer science\",\n",
-    "    \"mathematics\",\n",
-    "    \"engineering\",\n",
-    "    \"economics\",\n",
-    "    \"hard science\",\n",
-    "    \"physics\",\n",
-    "    \"social science\",\n",
-    "    \"biology\",\n",
-    "    \"sociology\",\n",
-    "    \"psychology\",\n",
-    "]\n",
-    "custom_functions.create_job_search_word_figure(\n",
-    "    jobs_df, search_terms, display_figure=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "732335f6",
-   "metadata": {},
-   "source": [
-    "{{<figure src=\"/images/leaving-academia/fig1.png\" >}}"
    ]
   },
   {
@@ -268,7 +187,7 @@
     "width=\"600\"\n",
     "caption=\"Me on the Today Show while at Dia. Mama we made it!\" >}}\n",
     "    \n",
-    "After much toiling, I landed my first tech job as a statistical analyst at Dia&Co(https://www.dia.com/). You may think you need to know how to be a data scientist or analyst __before__ you land your first job (and maybe __you__ do), but for me, that wasn’t the case. At Dia, I was on a growth-focused team that comprised of machine learning engineers, other analysts, a product manager, and product designers. I learned that everything in product is somehow related to a funnel, you always lead with the summary (and not the methodology), and most people don’t care about what statistical assumptions your model took into consideration.\n",
+    "After much toiling, I landed my first tech job as a statistical analyst at [Dia&Co](https://www.dia.com/). You may think you need to know how to be a data scientist or analyst __before__ you land your first job (and maybe __you__ do), but for me, that wasn’t the case. At Dia, I was on a growth-focused team that comprised of machine learning engineers, other analysts, a product manager, and product designers. I learned that everything in product is somehow related to a funnel, you always lead with the summary (and not the methodology), and most people don’t care about what statistical assumptions your model took into consideration.\n",
     "    \n",
     "I was lucky enough to have wonderful leads that took the time to mentor me and show me how to do things (rather than just do it themselves). I never wrote any production-level ML code or some fancy Python package, but I was able to see the behind the scene process of how recommendation systems were built and data systems were architectured. I highly recommend that type of experience.\n",
     "    \n",
